# kundli-rs

./: .gitignore  Cargo.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
docs/: derive-implementation-overview.md
plans/: abstract-watching-crystal.md  abundant-whistling-wolf.md  distributed-fluttering-peach.md  dynamic-fluttering-flamingo.md  enumerated-juggling-hare.md  foamy-swimming-dahl.md  frolicking-bouncing-pillow.md  gleaming-humming-wave.md  initial-plan.md  radiant-wondering-grove.md  shimmering-dreaming-teapot.md  smooth-splashing-corbato.md  snappy-juggling-corbato.md  snazzy-wondering-micali.md  steady-discovering-whale.md  streamed-brewing-abelson.md  unified-yawning-snowglobe.md  vivid-noodling-truffle.md
src/: lib.rs
src/kundli/: calculate.rs  config.rs  error.rs  mod.rs  model.rs
src/kundli/astro/: engine.rs  ephemeris.rs  error.rs  mod.rs  request.rs  result.rs
src/kundli/derive/: d1.rs  d9.rs  dasha.rs  house.rs  input.rs  mod.rs  nakshatra.rs  reference_points.rs  sign.rs
src/kundli/derive/pipeline/: core.rs  house.rs  materialize.rs  mod.rs  projection.rs  reference.rs  sign.rs
tests/: astro_request_validation.rs  astro_smoke.rs  derive_d1.rs  derive_d9.rs  derive_dasha.rs
tests/fixtures/astro/: coordinate_validation.json  smoke_case.json
